# rag-pdf-qa-pipeline

./: .gitignore  README.md  ingest_pdfs.py  ingest_pdfs2.py  main.py  pyproject.toml
notebook/: hybrid-retrieval-on-mul-docs.ipynb  testing-models.ipynb  testing-unstructured-docs-Failed.ipynb  testing-unstructured-docs.ipynb  unstructured-pipeline-learn.ipynb
