[project]
name = "testing-models-huge-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "pypdf>=6.6.0",
    "pypdf2>=3.0.1",
]
