[project]
name = "testing-models-huge-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "colpali-engine>=0.3.13",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "notebook>=7.5.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "pypdf>=6.6.0",
    "pypdf2>=3.0.1",
]
